<resources>
    <string name="app_name">NFShare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_receive">Receive</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="drawer_item_receive">接收内容</string>
    <string name="drawer_item_content">内容分享</string>
    <string name="drawer_item_resource">资源分享</string>
    <string name="drawer_item_devices">已知设备</string>
    <string name="drawer_item_tasks">任务列表</string>
    <string name="drawer_item_settings">测试</string>
    <string name="loading">加载中...</string>
    <string name="no_contact_permission">没有通讯录权限！</string>
    <string name="nfc_notify">请将另一台手机靠近NFC感应区域</string>


    <string name="pending_file">无</string>
    <string name="choose_image">分享图片</string>
    <string name="choose_video">分享视频</string>
    <string name="choose_file">分享文件</string>



    <string name="receive_with_pin">通过分享码接收</string>
    <string name="receive_with_wifi">手动搜索接收</string>
    <string name="share_pin">分享码：</string>


</resources>
