<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_receive"
            android:icon="@drawable/ic_receive"
            android:title="@string/drawer_item_receive" />
        <item
            android:id="@+id/nav_content"
            android:icon="@drawable/ic_content_share"
            android:title="@string/drawer_item_content" />
        <item
            android:id="@+id/nav_resource"
            android:icon="@drawable/ic_resource_share"
            android:title="@string/drawer_item_resource" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_devices"
            android:title="@string/drawer_item_devices" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/drawer_item_tasks" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/drawer_item_settings" />

        </menu>
    </item>

</menu>
